assets/css/styles.css
:root {
	--flecha-texto-bg-color: #E4B34A;
}

@font-face {
	font-family: 'Montserrat-regular';
	src: url('../fonts/static/Montserrat-Medium.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Montserrat-bold';
	src: url('../fonts/static/Montserrat-ExtraBold.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

body {
	line-height: 0;
}

.main {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	/*font-family: 'Roboto', sans-serif;*/
	font-family: 'Montserrat-regular';

}

/*START CSS PAGINA INDEX */
.main .container-main {
	width: 100vw;
	height: 100vh;
	background-image: url('../img/desktop/IMAGEN-EN-CONSTRUCCION-fondo-dsk.jpg');
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	display: flex;
	justify-content: center;
	align-items: center;

}

.main .container-main .info-container {
	width: 80%;
	text-align: center;
	color: #fff;
}

.main .container-main .info-container .comming-soon-text {
	font-family: 'Montserrat-bold';
	font-weight: bold;
	line-height: .5;
	font-size: 2rem;
}

main .container-main .info-container .comming-soon-text.small-text {
	font-size: .7rem;
}

.main .container-main .info-container img {
	width: 300px;
	/*width: 80%;*/
}

.main .container-main .info-container .loading-container {
	width: 100%;
}

.main .container-main .info-container .loading-container .bar-container {
	width: 100%;
	height: 10px;
	border: 1px solid #fff;
}

.main .container-main .info-container .loading-container .bar-container .color-bar {
	width: 70%;
	height: 10px;
	background-color: #fff;
}

.main .container-main .info-container .loading-container .text-container {
	display: flex;
	justify-content: space-between;
}

/* desde 827px en adelante*/
@media (min-width: 827px) {

	.main .container-main .info-container .loading-container .bar-container {
		width: 663px;
		margin: 0 auto;
	}

	.main .container-main .info-container .loading-container .text-container {
		width: 663px;
		margin: 0 auto;
	}

}

/* desde 1200px en adelante*/
@media (min-width: 1200px) {

	.main .container-main .info-container img {
		width: 500px;
	}

}

/*END CSS PAGINA INDEX */

.main .section {
	width: 70%;
	/*border: 1px solid #000;*/
}

.main .section .imagen-inicial {
	width: 100%;
}

.main .animal {
	width: 100%;
}

.main .arrow-container {
	/*border: 1px solid #000;*/
	height: 100px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.main .arrow-container .text-container {
	width: 60%;
	background-color: var(--flecha-texto-bg-color);
	height: 50%;
	text-align: center;
	line-height: .4;
	z-index: 1;
}

.main .arrow-container .arrow {
	width: 0;
	height: 0;
	/*border-left: 100px solid transparent;
	border-right: 100px solid transparent;*/
	/*border-top: 30px solid red;*/
	border-top: 35px solid var(--flecha-texto-bg-color);

}

.main .animal img {
	width: 100%;
	/*border: 1px solid red;*/
}

.main .animal .text-desc-container {
	width: 80%;
	/*border: 1px solid #000;*/
	padding-left: 10%;
	padding-right: 10%;
	margin-bottom: 30px;
}

.main .animal .text-desc-container .animal-text-desc {
	line-height: 1.12;
	font-size: .95rem;
}

.main .animal .animal-name {
	font-family: 'Montserrat-bold';
	font-weight: bold;
	font-size: 1.1em;
}

.main .animal .scientific-name {
	font-weight: bold;
	font-size: .95rem;
}

.main .animal .animal-text-desc span {
	font-family: 'Montserrat-bold';
	font-weight: bold;
}

.main .footer {
	width: 80%;
	display: flex;
	justify-content: center;
	margin-bottom: 50px;
}

.main .footer img {
	width: 40%;

}

